hubSide/force-app/main/default/objects/Table_decompte__c/Table_decompte__c.object-meta.xml
<CustomObject>
    <label>Table décompte</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Table décompte Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tables décompte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>