hubSide/force-app/main/default/objects/Table_decompte__c/fields/Gamme_formule__c.field-meta.xml
<CustomField>
    <fullName>Gamme_formule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gamme formule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Gamme__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Gamme formule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Gamme__c</referenceTo>
    <relationshipLabel>Tables décompte (Gamme formule)</relationshipLabel>
    <relationshipName>Tables_decompte_formule</relationshipName>
    <type>Lookup</type>
</CustomField>