hubSide/force-app/main/default/objects/Table_decompte__c/fields/Gamme_produit__c.field-meta.xml
<CustomField>
    <fullName>Gamme_produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gamme produit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Gamme__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Gamme_produit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Gamme__c</referenceTo>
    <relationshipLabel>Tables décompte (Gamme produit)</relationshipLabel>
    <relationshipName>Tables_decompte_produit</relationshipName>
    <type>Lookup</type>
</CustomField>