hubSide/force-app/main/default/objects/Table_decompte__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <formula>&apos;Offre&apos; + Gamme_formule__r.Name + &apos;_Produit&apos; + Gamme_produit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom</label>
    <type>Text</type>
</CustomField>