hubSide/force-app/main/default/objects/Table_decompte__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nom__c</columns>
    <columns>Coefficient_decompte__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>